--- a/index.html
+++ b/index.html
@@ -5,141 +5,119 @@
     <title>"Седона"</title>
   </head>
   <body>
-  	<header class="main-header">
-  	   <a href="#" class="logo">
+    <header class="main-header">
+      <a href="#" class="logo">
         <img src="#" alt="На главную">
-       </a>
-        <div>
-         <nav class="main-navigation">
-          <ul>
-            <li>
-              <a href="#">Информация</a> 	
-            </li>
-            <li>
-              <a href="#">Фото и видео</a>
-            </li>
-            <li>
-              <a href="#">Карта штата</a>
-            </li>
-            <li>
-              <a href="#">Гостиницы</a>
-            </li> 
-           </ul> 
-          </nav>
+      </a>
+      <nav class="main-navigation">
+        <ul>
+          <li>
+            <a href="#">Информация</a>
+          </li>
+          <li>
+            <a href="#">Фото и видео</a>
+          </li>
+          <li>
+            <a href="#">Карта штата</a>
+          </li>
+          <li>
+            <a href="#">Гостиницы</a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <main>
-      <div class="index-greeting">
-        <img src="#" width="460" height="355" alt="Welcome to Sedona">
-      </div>
-      <div class="index-intro">
-        <h2>Седона - небольшой городок в Аризоне,
-        <br>заслуживающий большего!
-        </h2>
-         <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
-      </div>
-      <section class="fact1">
-        <div class="town">
-          <h2>Настоящий
-          <br>городок
-          </h2>
-           <p>- №1 -</p>
-           <p>Седона не аттракцион для туристов, 
-           <br>там течёт своя жизнь</p>         
-        </div>
+    <div class="index-greeting">
+      <img src="#" width="460" height="355" alt="Welcome to Sedona">
+    </div>
+    <div class="index-intro">
+      <h2>Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
+      <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+    </div>
+    <section class="features">
+      <div class="feature pictured">
+        <h2>Настоящий городок</h2>
+        <span>- №1 -</span>
+        <p>Седона не аттракцион для туристов, там течёт своя жизнь</p>
         <img src="#" alt="Настоящий городок">
-      </section>
-      <section class="recommendations">
-        <div class="left">
-        	<img src="#" width="80" height="80" alt="house">
-           <h2>Жильё</h2>
-        	<p>Рекомендуем пожить в настоящем
-            <br>мотеле, всё как в кино!</p>      	
-        </div>	
-        <div class="center">
-        	<img src="#" width="80" height="80" alt="food">
-           <h2>Еда</h2>
-        	<p>Всегда заказывайте фирменный бургер,
-            <br>вы не разочаруетесь!</p>        	
-        </div>	
-        <div class="right">
-        	<img src="#" width="80" height="80" alt="souvenirs">
-           <h2>Сувениры</h2>
-        	<p>Не только китайского, но и местного
-            <br>производства!</p>      	
-        </div>
-      </section>
-      <section class="fact2">
-        <div class="bridge">
-          <h2>Там есть
-          <br>мост дьявола
-          </h2>
-            <p>- №2 -</p>
-            <p>Да, по нему можно пройти! Если конечно
-            <br>вы осмелитесь</p>            
-        </div>
-        <img src="#" alt="Мост дьявола">
-      </section>
-      <section class="other facts">
-        <div class="left">
-        	<h2>Небольшая
-            <br>площадь</h2>
-        	 <p>- №3 -</p>
-        	 <p>Все достопримечательности
-             <br>находятся очень близко</p> 
-        </div>	
-        <div class="center">
-            <h2>Красивая
-            <br>дорога</h2>
-        	 <p>- №4 -</p>
-        	 <p>Ехать в Седону из Лас-Вегаса совсем
-             <br>не скучно!</p> 
-        </div>	
-        <div class="right">
-            <h2>Мало
-            <br>туристов</h2>
-        	 <p>- №5 -</p>
-        	 <p>Большинство едет в Гранд Каньон
-             <br>и толпится там</p>       	 
-        </div>
-      </section>
-      <section class="search-motel">
-        <h1>Заинтересовались?</h1>
-      	  <p>Укажите предполагаемые даты поездки,
-      	  <br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-      	  <div class="search">
-      	  	<button>Поиск гостиницы в Седоне</button>
-      	  </div>
-      	  <form action="#" method="post">
-      	    <label for="dateIn-field">Дата заезда:</label>
-      	  	  <input type="date" name="dateIn" id="dateIn-field">
-      	  	<label for="dateOut-field">Дата выезда:</label>
-      	  	  <input type="date" name="dateOut" id="dateOut-field">
-      	  	<label for="adults-field">Взрослые:</label>
-      	  	  <input type="text" name="adults" id="adults-field">
-      	  	<label for="children-field">Дети:</label>
-      	  	  <input type="text" name="children" id="children-field">
-      	  	<button type="submit">Найти</button>        
-      	  </form>
-      </section>
-      <div class="map">
-      	<img src="#" alt="map">
       </div>
+      <div class="feature">
+        <h2>Жильё</h2>
+        <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+      </div>
+      <div class="feature">
+        <h2>Еда</h2>
+        <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+      </div>
+      <div class="feature">
+        <h2>Сувениры</h2>
+        <p>Не только китайского, но и местного производства!</p>
+      </div>
+      <div class="feature pictured">
+        <h2>Там есть мост дьявола</h2>
+        <span>- №2 -</span>
+        <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+        <img src="#" alt="Мост дьявола">
+      </div>
+      <div class="feature gray">
+        <h2>Небольшая площадь</h2>
+        <span>- №3 -</span>
+        <p>Все достопримечательности находятся очень близко</p>
+      </div>
+      <div class="feature gray">
+        <h2>Красивая дорога</h2>
+        <span>- №4 -</span>
+        <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+      </div>
+      <div class="feature gray">
+        <h2>Мало туристов</h2>
+        <span>- №5 -</span>
+        <p>Большинство едет в Гранд Каньон и толпится там</p>
+      </div>
+    </section>
+    <section class="search-motel">
+      <h1>Заинтересовались?</h1>
+      <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие
+      предложения гостиниц в Седоне</p>
+      <div class="search">
+        <button>Поиск гостиницы в Седоне</button>
+        <form action="https://echo.htmlacademy.ru" method="post">
+          <div class="calendar">
+            <label for="dateIn-field">Дата заезда:</label>
+            <input type="text" name="dateIn" id="dateIn-field">
+            <label for="dateOut-field">Дата выезда:</label>
+            <input type="text" name="dateOut" id="dateOut-field">
+          </div>
+          <div class="counter">
+            <label for="adults-field">Взрослые:</label>
+            <input type="text" name="adults" id="adults-field">
+            <label for="children-field">Дети:</label>
+            <input type="text" name="children" id="children-field">
+          </div>
+          <button type="submit">Найти</button>
+        </form>
+      </div>
+    </section>
+    <div class="map">
+      <img src="#" alt="map">
+    </div>
     </main>
     <footer class="main-footer">
       <div class="container">
         <section class="footer-tag">
           <a href="#">#VISITSEDONA</a>
         </section>
-        <section class="footer-social">        
+        <section class="footer-social">
           <a class="social-btn social-btn-twit" href="#">Твиттер</a>
           <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
           <a class="social-btn social-btn-youtube" href="#">Ютуб</a>
         </section>
         <section class="footer-copyright">
           <a href="https://htmlacademy.ru">
-          <img src="img/logo.png" alt="HTML Academy">     	
+            <img src="img/logo.png" alt="HTML Academy">
           </a>
         </section>
       </div>
     </footer>
   </body>
+</html>
