Графика и текстовые стили

--- a/hotels.html
+++ b/hotels.html
@@ -2,12 +2,13 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>"Седона"</title>
+    <title>Sedona</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
-      <a href="#" class="logo">
-        <img src="#" alt="На главную">
+      <a href="index.html" class="logo">
+        <img src="img/logo.png" width="138" height="70" alt="index">
       </a>
       <nav class="main-navigation">
         <ul>
@@ -27,6 +28,9 @@
       </nav>
     </header>
     <main>
+    <div class="backround-photo">
+      <img src="img/filterbackground.jpg" alt="Sedona">
+    </div>
     <section class="filter">
       <form action="https://echo.htmlacademy.ru" method="get">
         <fieldset>
@@ -80,7 +84,7 @@
       </div>
     </section>
     <section class="result-one">
-      <img src="#" alt="Amara">
+      <img src="img/amara.jpg" alt="Amara">
       <h2>Amara resort & SPA</h2>
       <span>Гостиница</span>
       <span>От 4000 р.</span>
@@ -92,7 +96,7 @@
       <span>Рейтинг:8,5</span>
     </section>
     <section class="result-two">
-      <img src="#" alt="Desert">
+      <img src="img/desert.jpg" alt="Desert">
       <h2>Desert quail INN</h2>
       <span>Мотель</span>
       <span>От 3000 р.</span>
@@ -104,7 +108,7 @@
       <span>Рейтинг:8,9</span>
     </section>
     <section class="result-three">
-      <img src="#" alt="Villas">
+      <img src="img/villas.jpg" alt="Villas">
       <h2>Villas at poco Diablo</h2>
       <span>Апартаменты</span>
       <span>От 2000 р.</span>
@@ -128,7 +132,7 @@
         </section>
         <section class="footer-copyright">
           <a href="https://htmlacademy.ru">
-            <img src="img/logo.png" alt="HTML Academy">
+            <img src="img/academy.png" alt="HTML Academy">
           </a>
         </section>
       </div>
