--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>"Седона"</title>
+    <title>Sedona</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
-      <a href="#" class="logo">
-        <img src="#" alt="На главную">
+      <a href="index.html" class="logo">
+        <img src="img/logo.png" width="138" height="70" alt="index">
       </a>
       <nav class="main-navigation">
         <ul>
@@ -21,14 +22,17 @@
             <a href="#">Карта штата</a>
           </li>
           <li>
-            <a href="#">Гостиницы</a>
+            <a href="hotels.html">Гостиницы</a>
           </li>
         </ul>
       </nav>
     </header>
     <main>
+    <div class="backround-photo">
+      <img src="img/background.jpg" alt="Sedona">
+    </div>
     <div class="index-greeting">
-      <img src="#" width="460" height="355" alt="Welcome to Sedona">
+      <img src="img/welcome.png" width="460" height="350" alt="Welcome">
     </div>
     <div class="index-intro">
       <h2>Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
@@ -39,7 +43,7 @@
         <h2>Настоящий городок</h2>
         <span>- №1 -</span>
         <p>Седона не аттракцион для туристов, там течёт своя жизнь</p>
-        <img src="#" alt="Настоящий городок">
+        <img src="img/town.jpg" alt="Real town">
       </div>
       <div class="feature">
         <h2>Жильё</h2>
@@ -57,7 +61,7 @@
         <h2>Там есть мост дьявола</h2>
         <span>- №2 -</span>
         <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-        <img src="#" alt="Мост дьявола">
+        <img src="img/bridge.jpg" alt="Devil's bridge">
       </div>
       <div class="feature gray">
         <h2>Небольшая площадь</h2>
@@ -83,41 +87,56 @@
         <button>Поиск гостиницы в Седоне</button>
         <form action="https://echo.htmlacademy.ru" method="post">
           <div class="calendar">
-            <label for="dateIn-field">Дата заезда:</label>
-            <input type="text" name="dateIn" id="dateIn-field">
-            <label for="dateOut-field">Дата выезда:</label>
-            <input type="text" name="dateOut" id="dateOut-field">
+            <div class="calendar-dateIn">
+              <label for="dateIn-field">Дата заезда:</label>
+              <input type="text" name="dateIn" id="dateIn-field">
+              <button></button>
+            </div>
+            <div class="calendar-dateOut">
+              <label for="dateOut-field">Дата выезда:</label>
+              <input type="text" name="dateOut" id="dateOut-field">
+              <button></button>
+            </div>
           </div>
           <div class="counter">
-            <label for="adults-field">Взрослые:</label>
-            <input type="text" name="adults" id="adults-field">
-            <label for="children-field">Дети:</label>
-            <input type="text" name="children" id="children-field">
+            <div class="counter-adults">
+              <label for="adults-field">Взрослые:</label>
+              <button></button>
+              <input type="text" name="adults" id="adults-field">
+              <button></button>
+            </div>
+            <div class="counter-children">
+              <label for="children-field">Дети:</label>
+              <button></button>
+              <input type="text" name="children" id="children-field">
+              <button></button>
+            </div>
           </div>
-          <button type="submit">Найти</button>
-        </form>
-      </div>
-    </section>
-    <div class="map">
-      <img src="#" alt="map">
+        </div>
+        <button type="submit">Найти</button>
+      </form>
     </div>
-    </main>
-    <footer class="main-footer">
-      <div class="container">
-        <section class="footer-tag">
-          <a href="#">#VISITSEDONA</a>
-        </section>
-        <section class="footer-social">
-          <a class="social-btn social-btn-twit" href="#">Твиттер</a>
-          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-          <a class="social-btn social-btn-youtube" href="#">Ютуб</a>
-        </section>
-        <section class="footer-copyright">
-          <a href="https://htmlacademy.ru">
-            <img src="img/logo.png" alt="HTML Academy">
-          </a>
-        </section>
-      </div>
-    </footer>
-  </body>
+  </section>
+  <div class="map">
+    <img src="img/map.jpg" alt="Map">
+  </div>
+  </main>
+  <footer class="main-footer">
+    <div class="container">
+      <section class="footer-tag">
+        <a href="#">#VISITSEDONA</a>
+      </section>
+      <section class="footer-social">
+        <a class="social-btn social-btn-twit" href="#">Твиттер</a>
+        <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+        <a class="social-btn social-btn-youtube" href="#">Ютуб</a>
+      </section>
+      <section class="footer-copyright">
+        <a href="https://htmlacademy.ru">
+          <img src="img/academy.png" alt="HTML Academy">
+        </a>
+      </section>
+    </div>
+  </footer>
+</body>
 </html>
